// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretKey technical tests renders 1`] = `
<body>
  <div>
    secret(some-secret-name)[some-key]
     
    <i
      class="Icon secret-button material interactive focusable"
      data-testid="show-secret-button-for-some-namespace/some-secret-name:some-key"
      tabindex="0"
    >
      <span
        class="icon"
        data-icon-name="visibility"
      >
        visibility
      </span>
    </i>
    <div
      data-testid="tooltip-content-for-show-secret-button-for-some-namespace/some-secret-name:some-key"
    >
      Show
    </div>
  </div>
</body>
`;

exports[`SecretKey technical tests when the show secret button is clicked renders 1`] = `
<body>
  <div>
    secret(some-secret-name)[some-key]
     
    <i
      class="Icon secret-button loading material interactive disabled focusable"
      data-testid="show-secret-button-for-some-namespace/some-secret-name:some-key"
    >
      <span
        class="icon"
        data-icon-name="visibility"
      >
        visibility
      </span>
    </i>
    <div
      data-testid="tooltip-content-for-show-secret-button-for-some-namespace/some-secret-name:some-key"
    >
      Show
    </div>
  </div>
</body>
`;

exports[`SecretKey technical tests when the show secret button is clicked when the secret fails to load with a primitive renders 1`] = `
<body>
  <div>
    Error: some-other-error
  </div>
</body>
`;

exports[`SecretKey technical tests when the show secret button is clicked when the secret fails to load with an error renders 1`] = `
<body>
  <div>
    Error: some-error
  </div>
</body>
`;

exports[`SecretKey technical tests when the show secret button is clicked when the secret fails to load with an object renders 1`] = `
<body>
  <div>
    Error: {"message":"some-error"}
  </div>
</body>
`;

exports[`SecretKey technical tests when the show secret button is clicked when the secret loads with base64 encoded data renders 1`] = `
<body>
  <div>
    some-data-for-some-key
  </div>
</body>
`;

exports[`SecretKey technical tests when the show secret button is clicked when the secret loads with non base64 encoded data renders 1`] = `
<body>
  <div>
    some-data-for-some-key
  </div>
</body>
`;
